playground/Drivers/src/generated/bindings_PSMWrapper.rs

/* automatically generated by rust-bindgen 0.69.1 */

pub type PSMHandle = *mut ::std::os::raw::c_void;
extern "C" {
    pub fn PSM_Create(
        sensePin: ::std::os::raw::c_uchar,
        controlPin: ::std::os::raw::c_uchar,
        range: ::std::os::raw::c_uint,
        mode: ::std::os::raw::c_int,
        divider: ::std::os::raw::c_uchar,
        interruptMinTimeDiff: ::std::os::raw::c_uchar,
    ) -> PSMHandle;
}
extern "C" {
    pub fn PSM_Set(handle: PSMHandle, value: ::std::os::raw::c_uint);
}
extern "C" {
    pub fn PSM_GetCounter(handle: PSMHandle) -> ::std::os::raw::c_long;
}
extern "C" {
    pub fn PSM_ResetCounter(handle: PSMHandle);
}
extern "C" {
    pub fn PSM_StopAfter(handle: PSMHandle, counter: ::std::os::raw::c_long);
}
extern "C" {
    pub fn PSM_CPS(handle: PSMHandle) -> ::std::os::raw::c_uint;
}
extern "C" {
    pub fn PSM_GetLastMillis(handle: PSMHandle) -> ::std::os::raw::c_ulong;
}
extern "C" {
    pub fn PSM_GetDivider(handle: PSMHandle) -> ::std::os::raw::c_uchar;
}
extern "C" {
    pub fn PSM_SetDivider(handle: PSMHandle, divider: ::std::os::raw::c_uchar);
}
extern "C" {
    pub fn PSM_ShiftDividerCounter(handle: PSMHandle, value: ::std::os::raw::c_char);
}
extern "C" {
    pub fn PSM_Destroy(handle: PSMHandle);
}
